--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <script type="text/template" id="howto-template">
       <h2>How to Play</h2>
-      <p>Help git bot sort the fork, push, pull, and clone actions as they travel through the factory and down the conveyer belt by pressing the <b>F</b>, <b>G</b>, <b>H</b>, and <b>J</b> keys on your keyboard.<p>
+      <p>Select start and choose a song. Press the <b>F</b>, <b>G</b>, <b>H</b>, and <b>J</b> keys on your keyboard as the fork, push, pull, and clone symbols go down the conveyer to the beat of the music.<p>
       <p>The better your timing, the higher your score will be!</p>
       <small>Press esc to return to main menu</small>
     </script>
