Misc HTML changes
- Add github fork ribbon
- Add box shadow
- Center game

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <div class="container">
     </div>
 
-    <audio class="click" src="audio/effects/click.wav">
-    <audio class="whip" src="audio/effects/whip.wav">
+    <audio class="click" src="audio/effects/click.wav"></audio>
+    <audio class="whip" src="audio/effects/whip.wav"></audio>
+
+    <a href="https://github.com/Choctopus/game-off-2012">
+      <img style="position: absolute; top: 0; right: 0; border: 0;"
+           src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
+           alt="Fork me on GitHub"></a>
 
     <script type="text/template" id="menu-template">
       <img class="flyin" src="img/logo.png"/>
