Add mute functionality

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
   <body>
 
+    <div id="mute">Mute</div>
+
     <div class="container">
     </div>
 
     <audio class="click" src="audio/effects/click.wav"></audio>
     <audio class="whip" src="audio/effects/whip.wav"></audio>
+    <audio class="menu-music" src="audio/songs/micro-invasion.mp3" loop="loop"></audio>
 
     <a href="https://github.com/Choctopus/game-off-2012">
       <img style="position: absolute; top: 0; right: 0; border: 0;"
