--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
         Paused
         <ul>
           <li class="menu">Main menu</li>
-          <li class="choose">Select Song</li>
+          <li class="choose">Select a Song</li>
+          <li class="retry">Restart</li>
         <ul>
       </div>
       <div id="game-over" class="game-text">
         Game Over
+        <ul>
+          <li class="retry">Retry</li>
+          <li class="choose">Select a New Song</li>
+        </ul>
       </div>
       <div id="ready" class="game-text">
         Ready...
@@ -51,6 +56,10 @@
       </div>
       <div id="clear" class="game-text">
         Stage Clear!
+        <ul>
+          <li class="choose">Select a New Song</li>
+          <li class="retry">Play Again</li>
+        </ul>
       </div>
       <div id="status"></div>
       <div class="action" id="forked">Forked!</div>
