First pass at menu styling

--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
     <script type="text/template" id="song-template">
       <div id="score-text" class="game-text">Score: <span id="score"></span></div>
       <div id="combo-text" class="game-text">Combo: <span id="combo"></span></div>
-      <div id="pause" class="game-text">
-        Paused
-        <ul>
-          <li class="menu">Main menu</li>
+      <div id="pause" class="center">
+        <span class="game-text">Paused</span>
+        <ul class="menu">
+          <li class="return-main-menu">Main menu</li>
           <li class="choose">Select a Song</li>
           <li class="retry">Restart</li>
         <ul>
       </div>
-      <div id="game-over" class="game-text">
-        Game Over
-        <ul>
+      <div id="game-over" class="center">
+        <span class="game-text">Game Over</span>
+        <ul class="menu">
           <li class="retry">Retry</li>
           <li class="choose">Select a New Song</li>
         </ul>
       </div>
-      <div id="ready" class="game-text">
+      <div id="ready" class="game-text center">
         Ready...
       </div>
-      <div id="go" class="game-text">
+      <div id="go" class="game-text center">
         GO!
       </div>
-      <div id="clear" class="game-text">
-        Stage Clear!
-        <ul>
+      <div id="clear" class="center">
+        <span class="game-text">Stage Clear!</span>
+        <ul class="menu">
           <li class="choose">Select a New Song</li>
           <li class="retry">Play Again</li>
         </ul>
       </div>
-      <div id="status"></div>
+      <div id="status" class="center"></div>
       <div class="action" id="forked">Forked!</div>
       <div class="action" id="pulled">Pulled!</div>
       <div class="action" id="pushed">Pushed!</div>
@@ -95,13 +95,14 @@
     <script type="text/template" id="songs-template">
       <h2>Choose a song</h2>
       <ul></ul>
+      <small>Press esc to return to main menu</small>
     </script>
 
     <script type="text/template" id="song-list-item-template">
-      <h3><%= name %><h3>
+      <h3><%= name %></h3>
       <dl>
         <dt>Artist:</dt>
-        <dd><%= artist %><dd>
+        <dd><%= artist %><dd><br>
         <dt>Difficulty:</dt>
         <dd><%= difficulty %></a><dd>
       </dl>
