More misc. styling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
   <body>
 
-    <div id="mute">Mute</div>
+    <div class="container"></div>
 
-    <div class="container">
-    </div>
+    <div id="mute">Mute</div>
 
     <audio class="click" src="audio/effects/click.wav"></audio>
     <audio class="whip" src="audio/effects/whip.wav"></audio>
