Add pause instructions, fix mute issue
Mute now remembers when you minimize or tab away from the game.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <div class="container"></div>
 
-    <div id="mute">Mute</div>
+    <div>
+      <div id="mute">Mute</div>
+      <p>P or Esc Pauses game</p>
+    </div>
 
     <audio class="click" src="audio/effects/click.wav"></audio>
     <audio class="whip" src="audio/effects/whip.wav"></audio>
