--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <div>
       <div id="mute">Mute</div>
-      <p>P or Esc Pauses game</p>
+      <p>Esc. for previous screen</p>
+      <p>(P or Esc Pauses game)</p>
     </div>
 
     <audio class="click" src="audio/effects/click.wav"></audio>
@@ -74,8 +75,10 @@
 
     <script type="text/template" id="credits-template">
       <h2>Choctopus Games</h2>
-      <p>Programming: Graham Conzett</p>
-      <p>Design and animation: Stephanie Owens</p>
+      <div class="us">
+        <p>Programming: Graham Conzett</p>
+        <p>Design and animation: Stephanie Owens</p>
+      </div>
       <h2>Music Credits</h2>
       <ul id="song-credits"></ul>
     </script>
@@ -107,8 +110,8 @@
 
     <script type="text/template" id="song-credit-template">
       <li>
-      <a href="<%= website %>"><%= artist %></a> - <%= name %></br>
-      <%= license %>
+      <%= name %> by <a href="<%= website %>"><%= artist %></a></br>
+      <small><%= license %></small>
       </li>
     </script>
 
