Add credit link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="pause" class="center">
         <span class="game-text">Paused</span>
         <ul class="menu">
-          <li class="return-main-menu">Main menu</li>
+          <li class="return-main-menu">Main Menu</li>
           <li class="choose">Select a Song</li>
           <li class="retry">Restart</li>
         <ul>
@@ -77,7 +77,7 @@
       <h2>Choctopus Games</h2>
       <div class="us">
         <p>Programming: Graham Conzett</p>
-        <p>Design and animation: Stephanie Owens</p>
+        <p>Design and animation: <a href="http://behance.com/stepho">Stephanie Owens</a></p>
       </div>
       <h2>Music Credits</h2>
       <ul id="song-credits"></ul>
